additional-tools/prometheus/virtual-service.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: grafana
  namespace: istio-ingress
spec:
  hosts:
  - "*"
  gateways:
  - istio-ingress/http-gateway
  http:
  - match:
    - uri:
        prefix: "/grafana"
    route:
    - destination:
        port:
          number: 80
        host: prometheus-stack-grafana.telemetry.svc.cluster.local
